--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pizza Mouse</title>
 </head>
 <body>
-    <h1>¡Bienvefdsfdsafdsnidos Pizza Mouse!</h1>
+    <h1>¡Bienvenidos Pizza Mouse!</h1>
+    <h2>Caca</h2>
 </body>
 </html>
