--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="es">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -13,9 +12,8 @@
     <link rel="shortcut icon" href="media/ico/pizzafavicon_Mesa de trabajo 1.png" type="image/x-icon">
     <title>Pizza Mouse</title>
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="inicio navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <img src="media/ico/pizzafavicon_Mesa de trabajo 1.png" alt="">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -50,12 +48,10 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn btn-outline-success" type="submit">Pide a Domicilio</button>
                 </form>
             </div>
         </div>
     </nav>
 </body>
-
 </html>
