Subo Nuevo Icono con mejor resolución a la Web

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="inicio navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <img src="media/ico/pizzafavicon_Mesa de trabajo 1.png" alt="">
+            <img src="media/ico/pizzaiconoweb-01.png" width="60" alt="">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
