Cambio en los cards

--- a/index.html
+++ b/index.html
@@ -55,37 +55,45 @@
         </div>
     </nav>
 
-    <div class="card" style="width: 18rem;">
-        <img src="media/pic/foto4.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Combinación 1</h5>
-            <a href="#" class="btn btn-primary">Pizza 1</a>
-        </div>
-    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="card-group">
+                <div class="card col-4" style="width: 18rem;">
+                    <img src="media/pic/foto4.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Combinación 1</h5>
+                        <a href="#" class="btn btn-primary">Pizza 1</a>
+                    </div>
+                </div>
 
-    <div class="card" style="width: 18rem;">
-        <img src="media/pic/foto1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Combinación 2</h5>           
-            <a href="#" class="btn btn-primary">Pizza 2</a>
-        </div>
-    </div>
+                <div class="card col-4" style="width: 18rem;">
+                    <img src="media/pic/foto1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Combinación 2</h5>
+                        <a href="#" class="btn btn-primary">Pizza 2</a>
+                    </div>
+                </div>
 
-    <div class="card" style="width: 18rem;">
-        <img src="media/pic/foto2.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Combinación 3</h5>
-            <a href="#" class="btn btn-primary">Pizza 3</a>
-        </div>
-    </div>
+                <div class="card col-4" style="width: 18rem;">
+                    <img src="media/pic/foto2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Combinación 3</h5>
+                        <a href="#" class="btn btn-primary">Pizza 3</a>
+                    </div>
+                </div>
 
-    <div class="card" style="width: 18rem;">
-        <img src="media/pic/foto3.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Combinación 4</h5>
-            <a href="#" class="btn btn-primary">Pizza 4</a>
+                <div class="card col-4" style="width: 18rem;">
+                    <img src="media/pic/foto3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Combinación 4</h5>
+                        <a href="#" class="btn btn-primary">Pizza 4</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
-</div>
 
 </body>
+
 </html>
