--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="inicio navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <img src="media/ico/pizzaiconoweb-01.png" width="60" alt="">
+            <img class="icono" src="media/ico/pizzaiconoweb-01.png" width="60" alt="">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -55,45 +55,48 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="card-group">
-                <div class="card col-4" style="width: 18rem;">
-                    <img src="media/pic/foto4.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Combinación 1</h5>
-                        <a href="#" class="btn btn-primary">Pizza 1</a>
-                    </div>
-                </div>
-
-                <div class="card col-4" style="width: 18rem;">
-                    <img src="media/pic/foto1.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Combinación 2</h5>
-                        <a href="#" class="btn btn-primary">Pizza 2</a>
-                    </div>
-                </div>
-
-                <div class="card col-4" style="width: 18rem;">
-                    <img src="media/pic/foto2.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Combinación 3</h5>
-                        <a href="#" class="btn btn-primary">Pizza 3</a>
-                    </div>
-                </div>
-
-                <div class="card col-4" style="width: 18rem;">
-                    <img src="media/pic/foto3.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Combinación 4</h5>
-                        <a href="#" class="btn btn-primary">Pizza 4</a>
-                    </div>
+    <div class="row row-cols-1 row-cols-md-2 g-4 mt-4 ">
+        <div class="col espetec bg-warning">
+            <div class="card bg-transparent">
+                <img src="media/pic/foto1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Pizza 1</h5>
+                    <p class="card-text"></p>
                 </div>
             </div>
         </div>
-
+        <div class="col espetec bg-warning">
+            <div class="card bg-transparent">
+                <img src="media/pic/foto2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Pizza 2</h5>
+                    <p class="card-text"></p>
+                </div>
+            </div>
+        </div>
+        <div class="col espetec bg-warning">
+            <div class="card bg-transparent">
+                <img src="media/pic/foto3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Pizza 3</h5>
+                    <p class="card-text"></p>
+                </div>
+            </div>
+        </div>
+        <div class="col espetec bg-warning">
+            <div class="card bg-transparent">
+                <img src="media/pic/foto4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Pizza 4</h5>
+                    <p class="card-text"></p>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
-
 </html>
