--- a/index.html
+++ b/index.html
@@ -55,40 +55,96 @@
         </div>
     </nav>
 
-    <div class="row row-cols-1 row-cols-md-2 g-4 mt-4 ">
-        <div class="col espetec bg-warning">
+    <div class="row row-cols-1 row-cols-md-4" style="margin: 10px; padding: 10px; border: solid black; border-radius: 10px; background: transparent;">
+
+        <div class="col-4 bg-warning" style="padding: 0px;">
             <div class="card bg-transparent">
-                <img src="media/pic/foto1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Pizza 1</h5>
+                <img src="media/pic/BarbacoaDelivery_B2200113_0_ES.png" class="card-img-top"
+                    alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h5 class="card-title" style="text-align: center;">Pizza 1</h5>
                     <p class="card-text"></p>
+                    <a href="#" class="btn btn-primary btn-dark">Añadir</a>
                 </div>
             </div>
         </div>
-        <div class="col espetec bg-warning">
+
+        <div class="col-4 bg-warning" style="padding: 0px;">
             <div class="card bg-transparent">
-                <img src="media/pic/foto2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Pizza 2</h5>
+                <img src="media/pic/CarbonaraDelivery_N2200923_0_ES.png" class="card-img-top"
+                    alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h5 class="card-title" style="text-align: center;">Pizza 2</h5>
                     <p class="card-text"></p>
+                    <a href="#" class="btn btn-primary btn-dark">Añadir</a>
                 </div>
             </div>
         </div>
-        <div class="col espetec bg-warning">
+
+        <div class="col-4 bg-warning" style="padding: 0px;">
             <div class="card bg-transparent">
-                <img src="media/pic/foto3.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Pizza 3</h5>
+                <img src="media/pic/HawaianaCrispyDelivery_WS210914_0_ES.png" class="card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h5 class="card-title" style="text-align: center;">Pizza 3</h5>
                     <p class="card-text"></p>
+                    <a href="#" class="btn btn-primary btn-dark">Añadir</a>
                 </div>
             </div>
         </div>
-        <div class="col espetec bg-warning">
+
+        <div class="col-4 bg-warning" style="padding: 0px;">
             <div class="card bg-transparent">
-                <img src="media/pic/foto4.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Pizza 4</h5>
+                <img src="media/pic/ParmesanaCarbonaraDelivery_PC210519_0_ES.png" class=" card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h5 class="card-title" style="text-align: center;">Pizza 4</h5>
                     <p class="card-text"></p>
+                    <a href="#" class="btn btn-primary btn-dark">Añadir</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4 bg-warning" style="padding: 0px;">
+            <div class="card bg-transparent">
+                <img src="media/pic/MargaritaDelivery_M2200214_0_ES.png" class="card-img-top"
+                    alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h5 class="card-title" style="text-align: center;">Pizza 5</h5>
+                    <p class="card-text"></p>
+                    <a href="#" class="btn btn-primary btn-dark">Añadir</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4 bg-warning" style="padding: 0px;">
+            <div class="card bg-transparent">
+                <img src="media/pic/CuatroQuesosDelivery_42200923_0_ES.png" class="card-img-top"
+                    alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h5 class="card-title" style="text-align: center;">Pizza 6</h5>
+                    <p class="card-text"></p>
+                    <a href="#" class="btn btn-primary btn-dark">Añadir</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4 bg-warning" style="padding: 0px;">
+            <div class="card bg-transparent">
+                <img src="media/pic/PatanegraDelivery_T2220110_0_ES.png" class="card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h5 class="card-title" style="text-align: center;">Pizza 7</h5>
+                    <p class="card-text"></p>
+                    <a href="#" class="btn btn-primary btn-dark">Añadir</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4 bg-warning" style="padding: 0px;">
+            <div class="card bg-transparent">
+                <img src="media/pic/CabramelizadaDelivery_R2200923_0_ES.png" class=" card-img-top" alt="...">
+                <div class="card-body" style="text-align: center;">
+                    <h5 class="card-title" style="text-align: center;">Pizza 8</h5>
+                    <p class="card-text"></p>
+                    <a href="#" class="btn btn-primary btn-dark">Añadir</a>
                 </div>
             </div>
         </div>
@@ -99,4 +155,5 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
 </body>
+
 </html>
